--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,10 @@
 .slick-arrow::before {
   color: black !important;
 }
+
+.slick-slide > div {
+  margin: 0 10px;
+}
+.slick-list {
+  margin: 0 -10px;
+}
