⚡️ Move from next/image to html img

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,14 @@
 .slick-list {
   margin: 0 -10px;
 }
+
+.heading-background {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  color: transparent;
+}
